Migrate the whole project to Java 8.